added attributed for target so that the web page load on new tab

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <h1>Ibrahim Momin</h1>
     <p>Software Developer, Passionate about learning new thing</p>
-    <a href="https://www.hackerrank.com/ibrahimop">Hackerrank</a>
-    <a href="https://leetcode.com/Ibrahim112/">LeetCode</a>
-    <a href="https://www.linkedin.com/in/ibrahim-momin-a7761a1aa/">linkedin</a>
+    <a href="https://www.hackerrank.com/ibrahimop" target="_blank">Hackerrank</a>
+    <a href="https://leetcode.com/Ibrahim112/" target="_blank">LeetCode</a>
+    <a href="https://www.linkedin.com/in/ibrahim-momin-a7761a1aa/" target="_blank">linkedin</a>
     <hr />
     <h2>Education</h2>
     <table border="2">
